<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Univer</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_add_course">Добавить</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_course_rename">Переименовать</string>
    <string name="action_course_remove">Удалить</string>
    <string name="empty_course_list">Список курсов пуст</string>
    <string name="empty_group_list">Список групп пуст</string>
    <string name="title_activity_group_list">GroupListActivity</string>
    <string name="action_group_rename">Переименовать</string>
    <string name="action_group_remove">Удалить</string>
    <string name="action_add_group">Добавить</string>
    <string name="empty_student_list">Список студентов пуст</string>
    <string name="action_add_student">Добавить студента</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_add_lesson">Добавить занятие</string>
    <string name="title_activity_create_student">CreateStudentActivity</string>
    <string name="Text_Imya">Имя</string>
    <string name="Text_Familia">Фамилия</string>
    <string name="Edit_Familia">Фамилия</string>
    <string name="Edit_Imya">Имя</string>
    <string name="Text_Otchestvo">Отчество</string>
    <string name="Edit_Otchestvo">Отчество</string>
    <string name="Text_Telefon_mob">Телефон</string>
    <string name="Text_Email">email</string>
    <string name="Edit_Email">email</string>
    <string name="Text_Data_birthday">День рождения</string>
    <string name="Text_Group">Группа</string>
    <string name="Button_Save">Создать</string>
    <string name="Button_Back">Отмена</string>
    <string name="title_activity_student">Студенты</string>
    <string name="title_activity_edit_student">Студент</string>
    <string name="Button_Student_edit">Изменить</string>
    <string name="action_show_rating">Показать рейтинг</string>
    <string name="title_activity_rating">RatingActivity</string>
    <string name="action_add_column">Добавить занятие</string>
    <string name="data_string_event">Дата занятия</string>
    <string name="event_type_string">Тип занятия</string>
    <string name="add_event_button_string">Добавить</string>
    <string name="add_event_button_string2">Создать</string>
    <string name="bal1">Количество баллов, соответствующее оценка 2</string>
    <string name="action_prop">Настроить БАРС</string>
    <string name="action_change">Показать нечетную неделю</string>
    <string name="title_activity_cho">choActivity</string>
    <string name="title_activity_sch">SchActivity</string>
    <string name="action_login">Войти в систему Ipsilon</string>
    <string name="action_export">Экспортировать в Excel</string>
    <string name="action_import">Импортировать из Excel</string>
    <string name="action_backup">Создать резервную копию БД</string>
    <string name="action_restore">Восстановить данные БД</string>
    <string name="title_activity_brouse">BrouseActivity</string>
    <string name="empty_directory">Список пуст</string>
    <string name="action_chouse_dir">Выбрать</string>
    <string name="action_clear">Очистить базу данных</string>
    <string name="empty_dis_list">Список дисциплин</string>
    <string name="title_activity_sync_group_list">Группы</string>
    <string name="empty_sync_group_list">Список групп пуст</string>
    <string name="title_activity_sync_group">Студенты</string>
    <string name="empty_sync_student_list">Список студентов пуст</string>
    <string name="title_activity_sync_rating">Рейтинг</string>
    <string name="download">Загрузить данные</string>
    <string name="download2">Обновить</string>
    <string name="upload">Загрузить данные на сервер</string>
    <string name="prompt_email2">Логин</string>
    <string name="prompt_password2">Пароль</string>
    <string name="action_sign_in2">Войти</string>

</resources>
