<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:id="@+id/Button_Back_to_Edit_group_and_Button_Add_Student" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <Button android:id="@+id/Button_Back_to_Edit_group" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/Button_Back" android:layout_weight="1.0" >
            <requestFocus />
        </Button>
        <Button android:id="@+id/Button_Save_student" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/Button_Save" android:layout_weight="1.0"  />
    </LinearLayout>
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/Button_Back_to_Edit_group_and_Button_Add_Student" android:layout_alignParentTop="true">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Text_Familia" />
            <EditText android:id="@+id/Edit_familia" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/Edit_Familia" android:inputType="textPersonName" >
                <requestFocus />
            </EditText>
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Text_Imya"/>
            <EditText android:id="@+id/Edit_imya" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/Edit_Imya" android:inputType="textPersonName" />
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Text_Otchestvo" />
            <EditText android:id="@+id/Edit_Otchestvo" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/Edit_Otchestvo" android:inputType="textPersonName"  />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Text_Telefon_mob"  />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <EditText android:id="@+id/Edit_Telefon_mob" android:layout_width="fill_parent" android:layout_height="wrap_content"  android:inputType="phone"/>
            </LinearLayout>
            <TextView android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/Text_Email"  />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <EditText android:id="@+id/Edit_Email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/Edit_Email" android:maxLines="5" android:inputType="textEmailAddress" android:isScrollContainer="true"  />
            </LinearLayout>
            <TextView android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/Text_Data_birthday"  />
            <TextView android:gravity="center_horizontal" android:id="@+id/Text_Data_birthday_data" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Text_Group"  />
            <Spinner android:id="@+id/Spinner_group" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>